--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -90,16 +90,16 @@ MIZROOTFILES=mml.ini mml.vct mizar.dct mizar.msg
 # gitolite
 GITOLITE_USER=$(PUBLIC_MWIKI_USER)
 GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
-GITOLITE_SOURCE_DIR=/var/cache/mwiki/gitolite-source
+GITOLITE_SOURCE_DIR=$(REPOS_BASE)/gitolite-source
 GITOLITE_INSTALL_DIR=/home/www
 GITOLITE_BIN_DIR=$(GITOLITE_INSTALL_DIR)/bin
 GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/conf
 GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/hooks
-MWIKI_ADMIN_DIR=/var/cache/mwiki/admin
+MWIKI_ADMIN_DIR=$(REPOS_BASE)/admin
 GITOLITE_ADMIN_DIR=$(MWIKI_ADMIN_DIR)/gitolite-admin
 
 gitolite:
-	chown -R www-data:www-data /var/cache/mwiki
+	chown -R www-data:www-data $(REPOS_BASE)
 	sudo -u www-data git clone $(GITOLITE_REPO) $(GITOLITE_SOURCE_DIR)
 	sudo -u www-data mkdir -p $(GITOLITE_BIN_DIR)
 	sudo -u www-data mkdir -p $(GITOLITE_CONF_DIR)
@@ -111,7 +111,7 @@ gitolite:
 	# import the mwiki into gitolite
 	sudo -u www-data git clone --bare $(PUBLIC_REPO) $(GITOLITE_INSTALL_DIR)/repositories/mwiki.git
 	touch $(GITOLITE_INSTALL_DIR)/.gitolite/conf/users.conf # initially empty list of users
-	chown -R www-data:www-data /var/cache/mwiki
+	chown -R www-data:www-data $(REPOS_BASE)
 	mkdir -p $(GITOLITE_ADMIN_DIR)
 	chown -R www-data:www-data $(GITOLITE_ADMIN_DIR)
 	sudo -u www-data git clone www-data@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)
