--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -91,7 +91,7 @@ MIZROOTFILES=mml.ini mml.vct mizar.dct mizar.msg
 GITOLITE_USER=$(PUBLIC_MWIKI_USER)
 GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
 GITOLITE_SOURCE_DIR=/var/cache/mwiki/gitolite-source
-GITOLITE_INSTALL_DIR=/var/www
+GITOLITE_INSTALL_DIR=/home/www
 GITOLITE_BIN_DIR=$(GITOLITE_INSTALL_DIR)/bin
 GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/conf
 GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/hooks
@@ -105,12 +105,12 @@ gitolite:
 	sudo -u www-data mkdir -p $(GITOLITE_CONF_DIR)
 	sudo -u www-data mkdir -p $(GITOLITE_HOOKS_DIR)
 	cd $(GITOLITE_SOURCE_DIR) && sudo -u www-data ./src/gl-system-install $(GITOLITE_BIN_DIR) $(GITOLITE_CONF_DIR) $(GITOLITE_HOOKS_DIR)
-	cp /var/www/.ssh/id_rsa.pub /tmp/www-data.pub
+	cp $(GITOLITE_INSTALL_DIR)/.ssh/id_rsa.pub /tmp/www-data.pub
 	sudo -i -u www-data $(GITOLITE_BIN_DIR)/gl-setup /tmp/www-data.pub
 	rm /tmp/www-data.pub
 	# import the mwiki into gitolite
-	sudo -u www-data git clone --bare $(PUBLIC_REPO) /var/www/repositories/mwiki.git
-	touch /var/www/.gitolite/conf/users.conf # initially empty list of users
+	sudo -u www-data git clone --bare $(PUBLIC_REPO) $(GITOLITE_INSTALL_DIR)/repositories/mwiki.git
+	touch $(GITOLITE_INSTALL_DIR)/.gitolite/conf/users.conf # initially empty list of users
 	chown -R www-data:www-data /var/cache/mwiki
 	mkdir -p $(GITOLITE_ADMIN_DIR)
 	chown -R www-data:www-data $(GITOLITE_ADMIN_DIR)
@@ -301,10 +301,10 @@ clean:
 	-mv -f /etc/sv/git-daemon/run.original /etc/sv/git-daemon/run
 	sv up git-daemon
 	# gitolite cleanup
-	rm -Rf /var/www/.gitolite
-	rm -Rf /var/www/gitolite
-	rm -Rf /var/www/repositories
-	rm -f /var/www/projects.list
-	rm -f /var/www/bin/gitolite*
-	rm -f /var/www/bin/gl-*
-	rm -f /var/www/bin/sshkeys-lint
+	rm -Rf $(GITOLITE_INSTALL_DIR)/.gitolite
+	rm -Rf $(GITOLITE_INSTALL_DIR)/gitolite
+	rm -Rf $(GITOLITE_INSTALL_DIR)/repositories
+	rm -f $(GITOLITE_INSTALL_DIR)/projects.list
+	rm -f $(GITOLITE_INSTALL_DIR)/bin/gitolite*
+	rm -f $(GITOLITE_INSTALL_DIR)/bin/gl-*
+	rm -f $(GITOLITE_INSTALL_DIR)/bin/sshkeys-lint
