--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -88,20 +88,28 @@ MIZBINARIES=accom envget exporter makeenv transfer verifier
 MIZROOTFILES=mml.ini mml.vct mizar.dct mizar.msg
 
 # gitolite
-GITOLITE_USER=mwiki
+GITOLITE_USER=$(PUBLIC_MWIKI_USER)
 GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
 GITOLITE_SOURCE_DIR=/var/cache/mwiki/gitolite-source
-GITOLITE_INSTALL_DIR=/var/cache/mwiki/gitolite
+GITOLITE_INSTALL_DIR=/var/www
 GITOLITE_BIN_DIR=$(GITOLITE_INSTALL_DIR)/bin
-GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/conf
-GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/hooks
+GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/conf
+GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/hooks
+GITOLITE_ADMIN_DIR=/var/cache/mwiki/admin
 
 gitolite:
-	git clone $(GITOLITE_REPO) $(GITOLITE_SOURCE_DIR)
-	mkdir -p $(GITOLITE_BIN_DIR)
-	mkdir -p $(GITOLITE_CONF_DIR)
-	mkdir -p $(GITOLITE_HOOKS_DIR)
-	cd $(GITOLITE_SOURCE_DIR) && ./src/gl-system-install $(GITOLITE_BIN_DIR) $(GITOLITE_CONF_DIR) $(GITOLITE_HOOKS_DIR)
+	chown -R www-data:www-data /var/cache/mwiki
+	sudo -u www-data git clone $(GITOLITE_REPO) $(GITOLITE_SOURCE_DIR)
+	sudo -u www-data mkdir -p $(GITOLITE_BIN_DIR)
+	sudo -u www-data mkdir -p $(GITOLITE_CONF_DIR)
+	sudo -u www-data mkdir -p $(GITOLITE_HOOKS_DIR)
+	cd $(GITOLITE_SOURCE_DIR) && sudo -u www-data ./src/gl-system-install $(GITOLITE_BIN_DIR) $(GITOLITE_CONF_DIR) $(GITOLITE_HOOKS_DIR)
+	cp /var/www/.ssh/id_rsa.pub /tmp/www-data.pub
+	sudo -i -u www-data $(GITOLITE_BIN_DIR)/gl-setup /tmp/www-data.pub
+	rm /tmp/www-data.pub
+	mkdir -p $(GITOLITE_ADMIN_DIR)
+	chown -R www-data:www-data $(GITOLITE_ADMIN_DIR)
+	sudo -u www-data git clone www-data@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)/gitolite-admin
 
 repos: public-repos gitweb mwiki
 	rm -Rf $(SCRATCH_BASE) # no need for this anymore
