more Mizar fine dependencies - seems working

--- a/Makefile-depsrepo
+++ b/Makefile-depsrepo
@@ -23,7 +23,7 @@ evl-tag = "    EVL "
 deps: $(DEP-MAKEFILES)
 	@cat $(DEP-MAKEFILES)| perl -e \
 	'while(<>) {@a=m/([^-. :]+)[.-][a-z]+/g; foreach $$k (@a[1..$$#a]) {print $$a[0], " ", $$k,"\n";}}' \
-	 | tsort | tac > deps  
+	 | tee deps0 | tsort | tac > deps  
 
 evls: $(EVL-FILES)
 
