--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -100,25 +100,25 @@ MWIKI_ADMIN_DIR=$(REPOS_BASE)/admin
 GITOLITE_ADMIN_DIR=$(MWIKI_ADMIN_DIR)/gitolite-admin
 
 gitolite:
-	chown -R www-data:www-data $(REPOS_BASE)
-	sudo -u www-data git clone $(GITOLITE_REPO) $(GITOLITE_SOURCE_DIR)
-	sudo -u www-data mkdir -p $(GITOLITE_BIN_DIR)
-	sudo -u www-data mkdir -p $(GITOLITE_CONF_DIR)
-	sudo -u www-data mkdir -p $(GITOLITE_HOOKS_DIR)
-	cd $(GITOLITE_SOURCE_DIR) && sudo -u www-data ./src/gl-system-install $(GITOLITE_BIN_DIR) $(GITOLITE_CONF_DIR) $(GITOLITE_HOOKS_DIR)
-	cp $(GITOLITE_INSTALL_DIR)/.ssh/id_rsa.pub /tmp/www-data.pub
-	sudo -u www-data sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && export PATH=$$PATH:$$HOME/bin && gl-setup  -q /tmp/www-data.pub'
-	rm /tmp/www-data.pub
+	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(REPOS_BASE)
+	sudo -u $(GITOLITE_USER) git clone $(GITOLITE_REPO) $(GITOLITE_SOURCE_DIR)
+	sudo -u $(GITOLITE_USER) mkdir -p $(GITOLITE_BIN_DIR)
+	sudo -u $(GITOLITE_USER) mkdir -p $(GITOLITE_CONF_DIR)
+	sudo -u $(GITOLITE_USER) mkdir -p $(GITOLITE_HOOKS_DIR)
+	cd $(GITOLITE_SOURCE_DIR) && sudo -u $(GITOLITE_USER) ./src/gl-system-install $(GITOLITE_BIN_DIR) $(GITOLITE_CONF_DIR) $(GITOLITE_HOOKS_DIR)
+	cp $(GITOLITE_INSTALL_DIR)/.ssh/id_rsa.pub /tmp/$(GITOLITE_USER).pub
+	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && export PATH=$$PATH:$$HOME/bin && gl-setup  -q /tmp/$(GITOLITE_USER).pub'
+	rm /tmp/$(GITOLITE_USER).pub
 	# import the mwiki into gitolite
-	sudo -u www-data git clone --bare $(PUBLIC_REPO) $(GITOLITE_INSTALL_DIR)/repositories/$(REPO_NAME).git
+	sudo -u $(GITOLITE_USER) git clone --bare $(PUBLIC_REPO) $(GITOLITE_INSTALL_DIR)/repositories/$(REPO_NAME).git
 	touch $(GITOLITE_INSTALL_DIR)/.gitolite/conf/users.conf # initially empty list of users
-	chown -R www-data:www-data $(REPOS_BASE)
+	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(REPOS_BASE)
 	mkdir -p $(GITOLITE_ADMIN_DIR)
-	chown -R www-data:www-data $(MWIKI_ADMIN_DIR)
-	chown -R www-data:www-data $(GITOLITE_ADMIN_DIR)
-	sudo -u www-data sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git clone www-data@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
+	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(MWIKI_ADMIN_DIR)
+	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(GITOLITE_ADMIN_DIR)
+	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git clone $(GITOLITE_USER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
 	cp gitolite-config $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
-	cd $(GITOLITE_ADMIN_DIR) && sudo -u www-data sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
+	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
 
 repos: public-repos gitweb mwiki
 	rm -Rf $(SCRATCH_BASE) # no need for this anymore
