--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -93,6 +93,7 @@ GITOLITE_REPO=/home/urban/ec/gitolite
 #GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
 GITOLITE_SOURCE_DIR=$(REPOS_BASE)/gitolite-source
 GITOLITE_INSTALL_DIR=/home/www
+#GITOLITE_INSTALL_DIR=/home/$(PUBLIC_MWIKI_USER)
 GITOLITE_BIN_DIR=$(GITOLITE_INSTALL_DIR)/bin
 GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/conf
 GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/hooks
@@ -116,7 +117,7 @@ gitolite:
 	mkdir -p $(GITOLITE_ADMIN_DIR)
 	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(MWIKI_ADMIN_DIR)
 	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(GITOLITE_ADMIN_DIR)
-	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git clone $(GITOLITE_USER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
+	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && export PATH=$$PATH:$$HOME/bin git clone $(GITOLITE_USER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
 	cp gitolite-config $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
 	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
 
