--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -112,13 +112,15 @@ gitolite:
 	sudo -u www-data git clone --bare $(PUBLIC_REPO) /var/www/repositories/mwiki.git
 	touch /var/www/.gitolite/conf/users.conf # initially empty list of users
 	chown -R www-data:www-data /var/cache/mwiki
-	mkdir -p $(GITOLITE_ADMIN_DIR)
 	# install the pre-receive hook into the admin dir
-	/usr/bin/install -m 755 pre-receive.in $(GITOLITE_ADMIN_DIR)/pre-receive
+	mkdir -p $(MWIKI_ADMIN_DIR)
+	/usr/bin/install -m 755 pre-receive.in $(MWIKI_ADMIN_DIR)/pre-receive
+	mkdir -p $(GITOLITE_ADMIN_DIR)
 	chown -R www-data:www-data $(GITOLITE_ADMIN_DIR)
 	sudo -u www-data git clone www-data@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)
 	cp gitolite-config $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
 	cd $(GITOLITE_ADMIN_DIR) && sudo -u www-data git commit -a -m 'Include users.conf in the config file and register the mwiki with gitolite.' && sudo -u www-data git push
+	chown -R www-data:www-data $(MWIKI_ADMIN_DIR) # hmm...
 
 repos: public-repos gitweb mwiki
 	rm -Rf $(SCRATCH_BASE) # no need for this anymore
