--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -122,7 +122,7 @@ gitolite:
 	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(MWIKI_ADMIN_DIR)
 	chown -R $(GITOLITE_USER):$(GITOLITE_USER) $(GITOLITE_ADMIN_DIR)
 	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && export PATH=$$PATH:$$HOME/bin && git clone $(GITOLITE_USER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
-	cp gitolite-config $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
+	sed -e "s|@@GITOLITE_USER@@|$(GITOLITE_USER)|g" < gitolite-config > $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
 	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
 
 repos: public-repos gitweb mwiki
