--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -93,11 +93,11 @@ MIZROOTFILES=mml.ini mml.vct mizar.dct mizar.msg
 
 # gitolite
 GITOLITE_USER=$(PUBLIC_MWIKI_USER)
-GITOLITE_REPO=/home/urban/ec/gitolite
-#GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
+#GITOLITE_REPO=/home/urban/ec/gitolite
+GITOLITE_REPO=git://github.com/sitaramc/gitolite.git
 GITOLITE_SOURCE_DIR=$(REPOS_BASE)/gitolite-source
 #GITOLITE_INSTALL_DIR=/home/www
-GITOLITE_INSTALL_DIR=/home/$(PUBLIC_MWIKI_USER)
+GITOLITE_INSTALL_DIR=/home/$(GITOLITE_USER)
 GITOLITE_BIN_DIR=$(GITOLITE_INSTALL_DIR)/bin
 GITOLITE_CONF_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/conf
 GITOLITE_HOOKS_DIR=$(GITOLITE_INSTALL_DIR)/gitolite/hooks
@@ -124,6 +124,10 @@ gitolite:
 	sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && export PATH=$$PATH:$$HOME/bin && git clone $(GITOLITE_USER)@localhost:gitolite-admin $(GITOLITE_ADMIN_DIR)'
 	sed -e "s|@@GITOLITE_USER@@|$(GITOLITE_USER)|g" < gitolite-config > $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
 	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(GITOLITE_USER) sh -c 'export HOME=$(GITOLITE_INSTALL_DIR) && git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
+	# suexec config
+	chown -R $(PUBLIC_MWIKI_USER):$(PUBLIC_MWIKI_USER) /home/$(PUBLIC_MWIKI_USER)
+	perl -e 'open(A,$$ARGV[0]); while(<A>) { s/##MWIKI_USER##/$$ARGV[1]/g; print }' \
+          suexec-config $(PUBLIC_MWIKI_USER) > /etc/apache2/suexec/$(PUBLIC_MWIKI_USER)
 
 repos: public-repos gitweb mwiki
 	rm -Rf $(SCRATCH_BASE) # no need for this anymore
@@ -277,14 +281,14 @@ gitweb: public-repo-export
 	apache2ctl restart
 
 apacheconf:
-	perl -e 'open(A,$$ARGV[0]); while(<A>) {s/##REPO_NAME##/$$ARGV[1]/g; s/##PUBLIC_REPO##/$$ARGV[2]/g; s/##REPO_DIR_INDEX##/$$ARGV[3]/g; s/##CGILIB##/$$ARGV[4]/g; print }' \
-          apacheconf-mizar.in $(REPO_NAME) $(PUBLIC_REPO) $(REPO_DIR_INDEX) $(CGILIB) > \
+	perl -e 'open(A,$$ARGV[0]); while(<A>) {s/##REPO_NAME##/$$ARGV[1]/g; s/##PUBLIC_REPO##/$$ARGV[2]/g; s/##REPO_DIR_INDEX##/$$ARGV[3]/g; s/##CGILIB##/$$ARGV[4]/g; s/##MWIKI_USER##/$$ARGV[5]/g; print }' \
+          apacheconf-mizar.in $(REPO_NAME) $(PUBLIC_REPO) $(REPO_DIR_INDEX) $(CGILIB) $(PUBLIC_MWIKI_USER)> \
           $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME) \
           && chmod 644 $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME)
 
 mwiki: public-repos apacheconf
 	mkdir -p $(CGILIB)/mwiki
-	$(INSTALL) -m 755 \
+	$(INSTALL) -m 7755 \
            --owner=$(PUBLIC_MWIKI_USER) --group=$(PUBLIC_MWIKI_USER) mwiki.cgi \
 	  $(CGILIB)/mwiki/mwiki.cgi
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
