--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -125,9 +125,9 @@ gitolite-setup:
 	sed -e "s|@@MWUSER@@|$(MWUSER)|g" < gitolite-config > $(GITOLITE_ADMIN_DIR)/conf/gitolite.conf
 	cd $(GITOLITE_ADMIN_DIR) && sudo -u $(MWUSER) sh -c 'git commit -a -m "Include users.conf in the config file and register the mwiki with gitolite." && git push'
 	# suexec config
-	chown -R $(PUBLIC_MWIKI_USER):$(PUBLIC_MWIKI_USER) /home/$(PUBLIC_MWIKI_USER)
+	chown -R $(MWUSER):$(MWUSER) /home/$(MWUSER)
 	perl -e 'open(A,$$ARGV[0]); while(<A>) { s/##MWIKI_USER##/$$ARGV[1]/g; print }' \
-          suexec-config $(PUBLIC_MWIKI_USER) > /etc/apache2/suexec/$(PUBLIC_MWIKI_USER)
+          suexec-config $(MWUSER) > /etc/apache2/suexec/$(MWUSER)
 
 repos: public-repos gitweb mwiki
 	rm -Rf $(SCRATCH_BASE) # no need for this anymore
@@ -284,7 +284,7 @@ gitweb: public-repo-export
 
 apacheconf:
 	perl -e 'open(A,$$ARGV[0]); while(<A>) {s/##REPO_NAME##/$$ARGV[1]/g; s/##PUBLIC_REPO##/$$ARGV[2]/g; s/##REPO_DIR_INDEX##/$$ARGV[3]/g; s/##CGILIB##/$$ARGV[4]/g; s/##MWIKI_USER##/$$ARGV[5]/g; print }' \
-          apacheconf-mizar.in $(REPO_NAME) $(PUBLIC_REPO) $(REPO_DIR_INDEX) $(CGILIB) $(PUBLIC_MWIKI_USER)> \
+          apacheconf-mizar.in $(REPO_NAME) $(PUBLIC_REPO) $(REPO_DIR_INDEX) $(CGILIB) $(MWUSER)> \
           $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME) \
           && chmod 644 $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME)
 
