--- a/apacheconf-mizar.in
+++ b/apacheconf-mizar.in
@@ -6,5 +6,13 @@ Alias /##REPO_NAME## "##PUBLIC_REPO##/html"
   Order allow,deny
   allow from all
 </Directory>
-ScriptAlias /bin "##CGILIB##"
-SuexecUserGroup ##MWIKI_USER## ##MWIKI_USER##
+
+<Directory /var/www/bin/>
+        AllowOverride None
+        Options ExecCGI SymLinksIfOwnerMatch
+        AddHandler cgi-script .cgi .pl
+        Order allow,deny
+        Allow from all
+</Directory>
+
+SuexecUserGroup ##MWUSER## ##MWUSER##
