--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -283,7 +283,7 @@ gitweb: public-repo-export
 	apache2ctl restart
 
 apacheconf:
-	perl -e 'open(A,$$ARGV[0]); while(<A>) {s/##REPO_NAME##/$$ARGV[1]/g; s/##PUBLIC_REPO##/$$ARGV[2]/g; s/##REPO_DIR_INDEX##/$$ARGV[3]/g; s/##CGILIB##/$$ARGV[4]/g; s/##MWIKI_USER##/$$ARGV[5]/g; print }' \
+	perl -e 'open(A,$$ARGV[0]); while(<A>) {s/##REPO_NAME##/$$ARGV[1]/g; s/##PUBLIC_REPO##/$$ARGV[2]/g; s/##REPO_DIR_INDEX##/$$ARGV[3]/g; s/##CGILIB##/$$ARGV[4]/g; s/##MWUSER##/$$ARGV[5]/g; print }' \
           apacheconf-mizar.in $(REPO_NAME) $(PUBLIC_REPO) $(REPO_DIR_INDEX) $(CGILIB) $(MWUSER)> \
           $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME) \
           && chmod 644 $(APACHE_ROOT)/etc/apache2/sites-available/$(REPO_NAME)
