--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -45,11 +45,12 @@
 MWUSER_HOME=/home/$(MWUSER)
 SCRATCH_BASE=$(MWUSER_HOME)/scratch
 REPOS_BASE=$(MWUSER_HOME)/clones
+BARE_REPOS=$(MWUSER_HOME)/repositories
 REPO_NAME=mwiki
 REPO_DIR_INDEX=00INDEX.html
 PUBLIC_REPO=$(REPOS_BASE)/public
 PUBLIC_SANDBOX=$(PUBLIC_REPO)-sandbox
-BARE_PUBLIC_REPO=$(MWUSER_HOME)/repositories/public.git
+BARE_PUBLIC_REPO=$(BARE_REPOS)/public.git
 REPOBIN=$(PUBLIC_REPO)/bin
 MIZBIN=$(MIZFILES)/bin
 MAKEJOBS=1
