--- a/Makefile.smallinstall
+++ b/Makefile.smallinstall
@@ -304,9 +304,9 @@ apacheconf:
 mwiki: public-repos apacheconf
 	mkdir -p $(CGILIB)
 	chown -R $(MWUSER):$(MWUSER) $(MWUSER_HOME)
-	$(INSTALL) -m 755 \
-           --owner=$(MWUSER) --group=$(MWUSER) mwiki.cgi \
-	  $(CGILIB)/mwiki.cgi
+	sed -e "s|@@MWUSER@@|$(MWUSER)|g; s|@@REPO_NAME@@|$(REPO_NAME)|g;" < mwiki.cgi > $(CGILIB)/mwiki.cgi
+	chown -R $(MWUSER):$(MWUSER) $(CGILIB)/mwiki.cgi
+	chmod 755 $(CGILIB)/mwiki.cgi
 	cd $(APACHE_ROOT)/etc/apache2/sites-enabled \
 	  && ln -f -s ../sites-available/$(REPO_NAME) $(REPO_NAME)
 	#chown -R $(MWUSER):$(MWUSER) /home/$(MWUSER)
